Fix layout on Firefox

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -169,6 +169,7 @@ header.header {
     transition-duration: $timing-medium;
     transition-property: padding-bottom;
     transition-timing-function: $transition-timing-function;
+    overflow: auto;
 
     .loading {
         display: block;
